kubernetes/fundamentals/mealie/mealie-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: mealie
spec:
  ingressClassName: traefik
  rules:
    - host: mealie.local
      http:
        paths:
          - backend:
              service:
                name: mealie
                #protocol: TCP
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - mealie.local
      secretName: mealie-production
